--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,22 @@
 absl-py==0.13.0
 astunparse==1.6.3
+bidict==0.21.2
 cachetools==4.2.2
 certifi==2021.5.30
 charset-normalizer==2.0.3
 click==8.0.1
 colorama==0.4.4
+dnspython==1.16.0
+eventlet==0.31.1
 Flask==2.0.1
 Flask-Cors==3.0.10
+Flask-SocketIO==4.3.1
 flatbuffers==1.12
 gast==0.4.0
 google-auth==1.33.0
 google-auth-oauthlib==0.4.4
 google-pasta==0.2.0
+greenlet==1.1.0
 grpcio==1.34.1
 gunicorn==20.1.0
 h5py==3.1.0
@@ -31,6 +36,8 @@ Pillow==8.3.1
 protobuf==3.17.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+python-engineio==3.13.2
+python-socketio==4.6.0
 requests==2.26.0
 requests-oauthlib==1.3.0
 rsa==4.7.2
