--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,24 @@
 absl-py==0.13.0
+altgraph==0.17
 astunparse==1.6.3
+bidict==0.21.2
 cachetools==4.2.2
 certifi==2021.5.30
 charset-normalizer==2.0.3
 click==8.0.1
 colorama==0.4.4
+dnspython==1.16.0
+eventlet==0.31.1
 Flask==2.0.1
 Flask-Cors==3.0.10
+Flask-SocketIO==4.3.1
 flatbuffers==1.12
+future==0.18.2
 gast==0.4.0
 google-auth==1.33.0
 google-auth-oauthlib==0.4.4
 google-pasta==0.2.0
+greenlet==1.1.0
 grpcio==1.34.1
 gunicorn==20.1.0
 h5py==3.1.0
@@ -27,10 +34,16 @@ oauthlib==3.1.1
 opencv-python==4.5.3.56
 opencv-python-headless==4.5.3.56
 opt-einsum==3.3.0
+pefile==2021.5.24
 Pillow==8.3.1
 protobuf==3.17.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pyinstaller==4.4
+pyinstaller-hooks-contrib==2021.2
+python-engineio==3.13.2
+python-socketio==4.6.0
+pywin32-ctypes==0.2.0
 requests==2.26.0
 requests-oauthlib==1.3.0
 rsa==4.7.2
